# overgraph

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  context7.json
benches/: async_flush.rs  core_ops.rs  phase44b_write_workload.rs  query_ops.rs  vector_ops.rs
docs/: api-reference.md  architecture-overview.md  getting-started.md  gql-subset.md  roadmap.md
overgraph-node/: Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json  query-types.d.ts  tsconfig.types.json
overgraph-python/: Cargo.toml  README.md  pyproject.toml
overgraph-python/python/overgraph/: __init__.py  __init__.pyi  async_api.py
overgraph-python/src/: lib.rs
overgraph-python/tests/: conftest.py  test_analytics.py  test_async.py  test_batch.py  test_connected_components.py  test_crud.py  test_degree.py  test_edge_cases.py  test_gql.py  test_graph_rows.py  test_lifecycle.py  test_maintenance.py  test_pagination.py  test_persistence.py  test_property_indexes.py  test_queries.py  test_query_api.py  test_retention.py  test_scrub.py  test_scrub_path.py  test_shortest_path.py  test_transactions.py  test_traversal.py  test_vector_search.py
src/: degree_cache.rs  dense_hnsw.rs  edge_metadata.rs  encoding.rs  engine.rs  error.rs  graph_row.rs  lib.rs  manifest.rs  memtable.rs  parallel.rs  planner_stats.rs  property_value_semantics.rs  row_projection.rs  scrub.rs  segment_components.rs  segment_reader.rs  segment_writer.rs  source_list.rs  sparse_postings.rs  types.rs  wal.rs  wal_sync.rs
tests/: inspect_integration.rs  (+16 more)
(+124 files in other folders)
