[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "overgraph"
version = "0.1.1"
description = "An absurdly fast embedded graph database for Python. Sub-microsecond reads, pure Rust core."
requires-python = ">=3.9"
license = {text = "MIT OR Apache-2.0"}
authors = [{name = "Brandon Hensley"}]
keywords = ["graph-database", "embedded", "performance", "in-process", "rust"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Database",
]

readme = "README.md"

[project.urls]
Repository = "https://github.com/Bhensley5/overgraph"
Homepage = "https://github.com/Bhensley5/overgraph"

[tool.maturin]
features = ["pyo3/extension-module", "pyo3/abi3-py39"]
python-source = "python"
